--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "webpack",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -21,12 +21,13 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/node": "~6.0.60",
     "amazon-cognito-auth-js": "^1.1.0",
     "amazon-cognito-identity-js": "1.21.0",
-    "aws-sdk": "2.141.0",
+    "aws-sdk": "^2.4.9",
+    "jquery": "^3.2.1",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
-    "jquery": "^3.2.1",
     "rxjs": "^5.5.4",
     "zone.js": "^0.8.14"
   },
@@ -36,7 +37,6 @@
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
