--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -32,7 +32,8 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "rxjs": "^5.5.4",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "ng2-toasty": "^2.1.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.6.1",
