--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -31,9 +31,10 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "ng2-toasty": "^2.1.0",
+    "ngx-md": "^3.1.0",
     "rxjs": "^5.5.4",
-    "zone.js": "^0.8.14",
-    "ng2-toasty": "^2.1.0"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "^1.6.1",
