--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -2,7 +2,10 @@
   "stages": {
     "dev": {
       "api_gateway_stage": "api"
-    }
+    },
+    "prod": {
+      "api_gateway_stage": "api"
+    }    
   },
   "version": "2.0",
   "app_name": "webportal"
