--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -29,10 +29,12 @@
     "aws-sdk": "^2.4.9",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "ng2-toasty": "^2.1.0",
     "ngx-md": "^3.1.0",
+    "primeng": "^5.2.7",
     "rxjs": "^5.5.4",
     "zone.js": "^0.8.14"
   },
