--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,4 +15,4 @@ sonar.sources=.
 # =====================================================
 sonar.host.url=https://sonarcloud.com
 sonar.organization=usdot-jpo-sdc
-sonar.login=dea3c7755f275a6b73f5bde0f30130a1cd28af65
+sonar.login=${SONAR_TOKEN}
