--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -46,6 +46,7 @@
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "aws-sdk-mock": "^4.4.0",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
