--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -39,6 +39,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "6.0.8",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
@@ -58,6 +59,6 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.4.2",
-    "webpack": "^3.10.0"
+    "webpack": "^4.39.1"
   }
 }
