--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -36,6 +36,7 @@
     "ngx-md": "^3.1.0",
     "primeng": "^5.2.7",
     "rxjs": "^5.5.4",
+    "uswds": "^1.6.13",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
