--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -37,10 +37,12 @@
     "primeng": "^5.2.7",
     "rxjs": "^5.5.4",
     "uswds": "^1.6.13",
+    "rxjs-compat": "^6.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.6",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cli": "6.0.8",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
