--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ webportal/webapp/Thumbs.db
 # Backend files
 __pycache__
 webportal/lambda/.chalice/deployments
+.coverage
+html_coverage_reports/
 
 .idea/
 .vscode/
