--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,10 @@ webportal/webapp/.DS_Store
 webportal/webapp/Thumbs.db
 
 # Backend files
-webportal/lambda/__pycache__
-webportal/lambda/.chalice
+__pycache__
+webportal/lambda/.chalice/deployments
+.coverage
+html_coverage_reports/
 
 .idea/
 .vscode/
