--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -8,7 +8,8 @@
     "build": "webpack",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "test-headless": "ng test --watch=false --browsers=ChromeHeadless"
   },
   "private": true,
   "dependencies": {
