--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,6 @@
-language: python
-python:
-    - 3.6
-install:
-    - pip install boto3
-    - pip install utils
-    - pip install moto
-    - pip install coverage
+language: node_js
+node_js:
+    - "12"
 branches:
     only:
         - master
@@ -15,6 +10,12 @@ addons:
     sonarcloud:
         organization: "usdot-jpo-sdc"
 
+before_script:
+  - npm install -g @angular/cli
+
+env:
+  - TEST_DIR=webportal/webapp/
+
 script:
-    - coverage erase
-    - sonar-scanner -X -D sonar.login=$SONAR_TOKEN
+    - cd $TEST_DIR && npm install && npm run test-headless
+    - cd ../../ && sonar-scanner -X -D sonar.login=$SONAR_TOKEN
