--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,18 @@
-language: node_js
-node_js:
-    - "12"
-branches:
-    only:
-        - master
-        - develop
-
-addons:
-    sonarcloud:
-        organization: "usdot-jpo-sdc"
-
-before_script:
-  - npm install -g @angular/cli
-
-env:
-  - TEST_DIR=webportal/webapp/
-
-script:
-    - cd $TEST_DIR && npm install && npm run test-headless
-    - cd ../../ && sonar-scanner -X -D sonar.login=$SONAR_TOKEN
+matrix:
+  include:
+    - language: node_js
+      node_js: "12"
+      branches:
+        - only:
+          - master
+          - develop
+      addons:
+        - sonarcloud:
+          - organization: "usdot-jpo-sdc"
+      before_script:
+        - npm install -g @angular/cli
+      env:
+        - TEST_DIR=webportal/webapp/
+      script:
+        - cd $TEST_DIR && npm install && npm run test-headless
+        - cd ../../ && sonar-scanner -X -D sonar.login=$SONAR_TOKEN
