--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,24 @@ matrix:
       script:
         - cd $TEST_DIR && npm install && npm run test-headless
         - cd ../../ && sonar-scanner -X -D sonar.login=$SONAR_TOKEN
+    - langauge: python
+      python: 3.6
+      branches:
+        - only:
+          - master
+          - develop
+      addons:
+        - sonarcloud:
+          - organization: "usdot-jpo-sdc"
+      install:
+        - pip install boto3
+        - pip install utils
+        - pip install moto
+        - pip install coverage
+        - pip install pytest
+        - pip install pytest-mock
+      env:
+        - TEST_DIR=webportal/lambda/
+      script:
+        - cd $TEST_DIR && coverage run -m pytest
+        - cd ../../ && sonar-scanner -X -D sonar.login=$SONAR_TOKEN
