--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
         - sonarcloud:
           - organization: "usdot-jpo-sdc"
       install:
-        - . ./webportal/lambda/setup_venv.sh
+        - pip install -f -r webportal/lambda/requirements.txt -r webportal/lambda/development_requirements.txt
       env:
         - TEST_DIR=webportal/lambda/
       script:
