--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,3 +16,4 @@ sonar.sources=.
 sonar.host.url=https://sonarcloud.com
 sonar.organization=usdot-jpo-sdc
 sonar.login=${SONAR_TOKEN}
+sonar.python.coverage.reportPaths = ./coverage.xml
