--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,10 +10,11 @@ sonar.links.issue=https://github.com/usdot-jpo-sdc/sdc-dot-webportal/issues
 # Language
 sonar.language=py
 sonar.sources=.
+sonar.exclusions=*coverage*.xml, **/__init__.py
+sonar.python.coverage.reportPaths = *coverage*.xml
 # =====================================================
 #   Properties that will be shared amongst all modules
 # =====================================================
 sonar.host.url=https://sonarcloud.com
 sonar.organization=usdot-jpo-sdc
 sonar.login=${SONAR_TOKEN}
-sonar.python.coverage.reportPaths = webportal/lambda/coverage.xml
