--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.links.scm=https://github.com/usdot-jpo-sdc/sdc-dot-webportal
 sonar.links.issue=https://github.com/usdot-jpo-sdc/sdc-dot-webportal/issues
 # Language
 sonar.language=py
-sonar.sources=webportal/lambda/tests, webportal/lambda
+sonar.sources=webportal/lambda
 sonar.exclusions=*coverage*.xml, **/__init__.py
 sonar.python.coverage.reportPaths = *coverage*.xml
 # =====================================================
