--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,6 +10,7 @@ sonar.links.issue=https://github.com/usdot-jpo-sdc/sdc-dot-webportal/issues
 # Language
 sonar.language=py
 sonar.sources=webportal/lambda
+sonar.tests=webportal/lambda/tests
 sonar.exclusions=*coverage*.xml, **/__init__.py
 sonar.python.coverage.reportPaths = *coverage*.xml
 # =====================================================
