--- a/webportal/webapp/angular.json
+++ b/webportal/webapp/angular.json
@@ -45,6 +45,14 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
+            },
+            "dev-private": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.dev-private.ts"
+                }
+              ]
             }
           }
         },
