--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,8 +9,8 @@ sonar.links.scm=https://github.com/usdot-jpo-sdc/sdc-dot-webportal
 sonar.links.issue=https://github.com/usdot-jpo-sdc/sdc-dot-webportal/issues
 # Language
 sonar.language=py
-sonar.sources=deployment
-sonar.tests=tests/deployment
+sonar.sources=webportal/lambda/deployment
+sonar.tests=webportal/lambda/tests/deployment
 sonar.exclusions=*coverage*.xml, **/__init__.py
 sonar.python.coverage.reportPaths = *coverage*.xml
 # =====================================================
