--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -39,7 +39,7 @@
         "TABLENAME_AVAILABLE_DATASET": "dev-AvailableDataset",
         "TABLENAME_AUTOEXPORT_USERS": "dev-AutoExportUsersTable",
         "RESTAPIID": "3lcauverj5",
-        "AUTHORIZERID": "pby0gw",
+        "AUTHORIZERID": "04vmys",
         "TABLENAME_TRUSTED_USERS": "dev-TrustedUsersTable",
         "TABLENAME_EXPORT_FILE_REQUEST": "dev-RequestExportTable",
         "TABLENAME_MANAGE_USER": "dev-ManageUserWorkstationTable",
