--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.language=py
 sonar.sources=webportal/lambda/deployment
 sonar.tests=webportal/lambda/tests/deployment
 sonar.exclusions=*coverage*.xml, **/__init__.py
-sonar.python.coverage.reportPaths = *coverage*.xml
+sonar.python.coverage.reportPaths = webportal/lambda/coverage.xml
 # =====================================================
 #   Properties that will be shared amongst all modules
 # =====================================================
