clean re-deploy

--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -115,8 +115,8 @@
         "TABLENAME_USER_STACKS": "prod-UserStacksTable",
         "TABLENAME_AVAILABLE_DATASET": "prod-AvailableDataset",
         "TABLENAME_AUTOEXPORT_USERS": "prod-AutoExportUsersTable",
-        "RESTAPIID": "0dfuembq49",
-        "AUTHORIZERID": "9cf7hf",
+        "RESTAPIID": "iol7itv3q4",
+        "AUTHORIZERID": "mwo4qg",
         "TABLENAME_TRUSTED_USERS": "production-TrustedUsersTable",
         "TABLENAME_EXPORT_FILE_REQUEST": "production-RequestExportTable",
         "TABLENAME_MANAGE_USER": "production-ManageUserWorkstationTable",
