--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -25,6 +25,33 @@
         "IDP_PROVIDER_ARNS":"arn:aws:cognito-idp:us-east-1:911061262852:userpool/us-east-1_Y5JI7ysvY"
       }
     },
+    "dev-private": {
+      "api_gateway_endpoint_type": "PRIVATE",
+      "api_gateway_endpoint_vpce": "vpce-0052333c172f0faa2",
+      "api_gateway_stage": "webportal-api",
+      "tags": {
+        "Environment": "dev",
+        "Project": "SDC-Platform",
+        "Team": "sdc-platform"
+      },
+      "environment_variables":{
+        "TABLENAME_USER_STACKS": "dev-UserStacksTable",
+        "TABLENAME_AVAILABLE_DATASET": "dev-AvailableDataset",
+        "TABLENAME_AUTOEXPORT_USERS": "dev-AutoExportUsersTable",
+        "RESTAPIID": "3lcauverj5",
+        "AUTHORIZERID": "04vmys",
+        "TABLENAME_TRUSTED_USERS": "dev-TrustedUsersTable",
+        "TABLENAME_EXPORT_FILE_REQUEST": "dev-RequestExportTable",
+        "TABLENAME_MANAGE_USER": "dev-ManageUserWorkstationTable",
+        "TABLENAME_MANAGE_USER_INDEX": "dev-workstation-username-index",
+        "TABLENAME_MANAGE_DISK": "dev-ManageDiskspaceRequestsTable",
+        "TABLENAME_MANAGE_DISK_INDEX": "dev-diskspace-username-index",
+        "TABLENAME_MANAGE_UPTIME": "dev-ScheduleUptimeTable",
+        "TABLENAME_MANAGE_UPTIME_INDEX":"dev-scheduleuptime-username-index",
+        "COGNITO_USER_POOL":"dev-sdc-dot-cognito-pool",
+        "IDP_PROVIDER_ARNS":"arn:aws:cognito-idp:us-east-1:911061262852:userpool/us-east-1_Y5JI7ysvY"
+      }
+    },
     "test": {
       "api_gateway_stage": "api",
       "tags": {
@@ -50,31 +77,6 @@
         "IDP_PROVIDER_ARNS":"arn:aws:cognito-idp:us-east-1:911061262852:userpool/us-east-1_89P1HiXoV"
       }
     },
-    "prod": {
-      "api_gateway_stage": "api",
-      "tags": {
-        "Environment": "prod",
-        "Project": "SDC-Platform",
-        "Team": "sdc-platform"
-      },
-      "environment_variables":{
-        "TABLENAME_USER_STACKS": "prod-UserStacksTable",
-        "TABLENAME_AVAILABLE_DATASET": "prod-AvailableDataset",
-        "TABLENAME_AUTOEXPORT_USERS": "prod-AutoExportUsersTable",
-        "RESTAPIID": "cyfca70occ",
-        "AUTHORIZERID": "r6ck6c",
-        "TABLENAME_TRUSTED_USERS": "production-TrustedUsersTable",
-        "TABLENAME_EXPORT_FILE_REQUEST": "production-RequestExportTable",
-        "TABLENAME_MANAGE_USER": "production-ManageUserWorkstationTable",
-        "TABLENAME_MANAGE_USER_INDEX": "production-workstation-username-index",
-        "TABLENAME_MANAGE_DISK": "production-ManageDiskspaceRequestsTable",
-        "TABLENAME_MANAGE_DISK_INDEX": "production-diskspace-username-index",
-        "TABLENAME_MANAGE_UPTIME": "production-ScheduleUptimeTable",
-        "TABLENAME_MANAGE_UPTIME_INDEX":"production-scheduleuptime-username-index",
-        "COGNITO_USER_POOL":"dev-sdc-dot-cognito-pool",
-        "IDP_PROVIDER_ARNS":"arn:aws:cognito-idp:us-east-1:911061262852:userpool/us-east-1_Y5JI7ysvY"
-      }
-    },
     "production": {
       "api_gateway_stage": "api",
       "tags": {
@@ -88,6 +90,33 @@
         "TABLENAME_AUTOEXPORT_USERS": "prod-AutoExportUsersTable",
         "RESTAPIID": "bzzlrrsxa4",
         "AUTHORIZERID": "0zxcbc",
+        "TABLENAME_TRUSTED_USERS": "production-TrustedUsersTable",
+        "TABLENAME_EXPORT_FILE_REQUEST": "production-RequestExportTable",
+        "TABLENAME_MANAGE_USER": "production-ManageUserWorkstationTable",
+        "TABLENAME_MANAGE_USER_INDEX": "production-workstation-username-index",
+        "TABLENAME_MANAGE_DISK": "production-ManageDiskspaceRequestsTable",
+        "TABLENAME_MANAGE_DISK_INDEX": "production-diskspace-username-index",
+        "TABLENAME_MANAGE_UPTIME": "production-ScheduleUptimeTable",
+        "TABLENAME_MANAGE_UPTIME_INDEX":"production-scheduleuptime-username-index",
+        "COGNITO_USER_POOL":"prod-sdc-dot-cognito-pool",
+        "IDP_PROVIDER_ARNS":"arn:aws:cognito-idp:us-east-1:911061262852:userpool/us-east-1_1zLqP2XrI"
+      }
+    },
+    "production-private": {
+      "api_gateway_endpoint_type": "PRIVATE",
+      "api_gateway_endpoint_vpce": "vpce-0052333c172f0faa2",
+      "api_gateway_stage": "webportal-api",
+      "tags": {
+        "Environment": "prod",
+        "Project": "SDC-Platform",
+        "Team": "sdc-platform"
+      },
+      "environment_variables":{
+        "TABLENAME_USER_STACKS": "prod-UserStacksTable",
+        "TABLENAME_AVAILABLE_DATASET": "prod-AvailableDataset",
+        "TABLENAME_AUTOEXPORT_USERS": "prod-AutoExportUsersTable",
+        "RESTAPIID": "iol7itv3q4",
+        "AUTHORIZERID": "mwo4qg",
         "TABLENAME_TRUSTED_USERS": "production-TrustedUsersTable",
         "TABLENAME_EXPORT_FILE_REQUEST": "production-RequestExportTable",
         "TABLENAME_MANAGE_USER": "production-ManageUserWorkstationTable",
