--- a/webportal/webapp/angular.json
+++ b/webportal/webapp/angular.json
@@ -102,7 +102,24 @@
                   "with": "src/environments/environment.test-private.ts"
                 }
               ]
-            }
+            },
+            "ecs-dev": {
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.ecs-dev.ts"
+                }
+              ]
+            }	            }
           }
         },
         "serve": {
