--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -81,6 +81,33 @@
         "IDP_PROVIDER_ARNS":"arn:aws:cognito-idp:us-east-1:911061262852:userpool/us-east-1_sNIwupW53"
       }
     },
+    "ecs-prod": {
+      "api_gateway_endpoint_type": "PRIVATE",
+      "api_gateway_endpoint_vpce": "vpce-032401e81781e04b4",
+      "api_gateway_stage": "webportal-api",
+      "tags": {
+        "Environment": "prod",
+        "Project": "SDC-Platform",
+        "Team": "sdc-platform"
+      },
+      "environment_variables":{
+        "TABLENAME_USER_STACKS": "prod-UserStacksTable",
+        "TABLENAME_AVAILABLE_DATASET": "prod-AvailableDataset",
+        "TABLENAME_AUTOEXPORT_USERS": "prod-AutoExportUsersTable",
+        "RESTAPIID": "3lcauverj5",
+        "AUTHORIZERID": "04vmys",
+        "TABLENAME_TRUSTED_USERS": "prod-TrustedUsersTable",
+        "TABLENAME_EXPORT_FILE_REQUEST": "prod-RequestExportTable",
+        "TABLENAME_MANAGE_USER": "prod-ManageUserWorkstationTable",
+        "TABLENAME_MANAGE_USER_INDEX": "prod-workstation-username-index",
+        "TABLENAME_MANAGE_DISK": "prod-ManageDiskspaceRequestsTable",
+        "TABLENAME_MANAGE_DISK_INDEX": "prod-diskspace-username-index",
+        "TABLENAME_MANAGE_UPTIME": "prod-ScheduleUptimeTable",
+        "TABLENAME_MANAGE_UPTIME_INDEX":"prod-scheduleuptime-username-index",
+        "COGNITO_USER_POOL":"prod-sdc-dot-cognito-pool",
+        "IDP_PROVIDER_ARNS":"arn:aws:cognito-idp:us-east-1:004118380849:userpool/us-east-1_sNIwupW53"
+      }
+    },
     "test": {
       "api_gateway_stage": "api",
       "tags": {
