--- a/webportal/webapp/angular.json
+++ b/webportal/webapp/angular.json
@@ -119,6 +119,23 @@
                   "with": "src/environments/environment.ecs-dev.ts"
                 }
               ]
+            },
+            "ecs-prod": {
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.ecs-prod.ts"
+                }
+              ]
             }
           }
         },
