--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -218,6 +218,6 @@
   "version": "2.0",
   "app_name": "webportal",
   "environment_variables":{
-    "RECEIVER_EMAIL": "support@securedatacommons.com"
+    "RECEIVER_EMAIL": "sdc-support@dot.gov"
   }
 }
