--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -67,8 +67,8 @@
         "TABLENAME_USER_STACKS": "dev-UserStacksTable",
         "TABLENAME_AVAILABLE_DATASET": "dev-AvailableDataset",
         "TABLENAME_AUTOEXPORT_USERS": "dev-AutoExportUsersTable",
-        "RESTAPIID": "3lcauverj5",
-        "AUTHORIZERID": "04vmys",
+        "RESTAPIID": "uz94abqed5",
+        "AUTHORIZERID": "xk85vl",
         "TABLENAME_TRUSTED_USERS": "dev-TrustedUsersTable",
         "TABLENAME_EXPORT_FILE_REQUEST": "dev-RequestExportTable",
         "TABLENAME_MANAGE_USER": "dev-ManageUserWorkstationTable",
