--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -94,8 +94,8 @@
         "TABLENAME_USER_STACKS": "prod-UserStacksTable",
         "TABLENAME_AVAILABLE_DATASET": "prod-AvailableDataset",
         "TABLENAME_AUTOEXPORT_USERS": "prod-AutoExportUsersTable",
-        "RESTAPIID": "3lcauverj5",
-        "AUTHORIZERID": "04vmys",
+        "RESTAPIID": "3jca2s255l",
+        "AUTHORIZERID": "tvt9se",
         "TABLENAME_TRUSTED_USERS": "prod-TrustedUsersTable",
         "TABLENAME_EXPORT_FILE_REQUEST": "prod-RequestExportTable",
         "TABLENAME_MANAGE_USER": "prod-ManageUserWorkstationTable",
