--- a/webportal/lambda/.chalice/config.json
+++ b/webportal/lambda/.chalice/config.json
@@ -94,18 +94,18 @@
         "TABLENAME_USER_STACKS": "prod-UserStacksTable",
         "TABLENAME_AVAILABLE_DATASET": "prod-AvailableDataset",
         "TABLENAME_AUTOEXPORT_USERS": "prod-AutoExportUsersTable",
-        "RESTAPIID": "3lcauverj5",
-        "AUTHORIZERID": "04vmys",
-        "TABLENAME_TRUSTED_USERS": "prod-TrustedUsersTable",
-        "TABLENAME_EXPORT_FILE_REQUEST": "prod-RequestExportTable",
-        "TABLENAME_MANAGE_USER": "prod-ManageUserWorkstationTable",
-        "TABLENAME_MANAGE_USER_INDEX": "prod-workstation-username-index",
+        "RESTAPIID": "3jca2s255l",
+        "AUTHORIZERID": "tvt9se",
+        "TABLENAME_TRUSTED_USERS": "production-TrustedUsersTable",
+        "TABLENAME_EXPORT_FILE_REQUEST": "production-RequestExportTable",
+        "TABLENAME_MANAGE_USER": "production-ManageUserWorkstationTable",
+        "TABLENAME_MANAGE_USER_INDEX": "production-workstation-username-index",
         "TABLENAME_MANAGE_DISK": "prod-ManageDiskspaceRequestsTable",
         "TABLENAME_MANAGE_DISK_INDEX": "prod-diskspace-username-index",
-        "TABLENAME_MANAGE_UPTIME": "prod-ScheduleUptimeTable",
-        "TABLENAME_MANAGE_UPTIME_INDEX":"prod-scheduleuptime-username-index",
+        "TABLENAME_MANAGE_UPTIME": "production-ScheduleUptimeTable",
+        "TABLENAME_MANAGE_UPTIME_INDEX":"production-scheduleuptime-username-index",
         "COGNITO_USER_POOL":"prod-sdc-dot-cognito-pool",
-        "IDP_PROVIDER_ARNS":"arn:aws:cognito-idp:us-east-1:004118380849:userpool/us-east-1_sNIwupW53"
+        "IDP_PROVIDER_ARNS":"arn:aws:cognito-idp:us-east-1:004118380849:userpool/us-east-1_e13lOvIqH"
       }
     },
     "test": {
