--- a/webportal/webapp/angular.json
+++ b/webportal/webapp/angular.json
@@ -123,7 +123,7 @@
             "ecs-prod": {
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": true,
+              "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
               "aot": true,
