SDC-3617 Changed travis ci and sonar config

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,12 @@
-sonar.projectKey=usdot-jpo-sdc_sdc-dot-webportal
+sonar.projectKey=USDOT-SDC_sdc-dot-webportal
 sonar.projectName=sdc-dot-webportal
 # =====================================================
 #   Meta-data for the project
 # =====================================================
-sonar.links.homepage=https://github.com/usdot-jpo-sdc/usdot-jpo-sdc_sdc-dot-webportal
-sonar.links.ci=https://travis-ci.com/usdot-jpo-sdc/sdc-dot-webportal
-sonar.links.scm=https://github.com/usdot-jpo-sdc/sdc-dot-webportal
-sonar.links.issue=https://github.com/usdot-jpo-sdc/sdc-dot-webportal/issues
+sonar.links.homepage=https://github.com/USDOT-SDC/USDOT-SDC_sdc-dot-webportal
+sonar.links.ci=https://travis-ci.com/USDOT-SDC/sdc-dot-webportal
+sonar.links.scm=https://github.com/USDOT-SDC/sdc-dot-webportal
+sonar.links.issue=https://github.com/USDOT-SDC/sdc-dot-webportal/issues
 # Language
 sonar.language=py
 sonar.sources=webportal/lambda/deployment
@@ -17,5 +17,5 @@ sonar.python.coverage.reportPaths = webportal/lambda/coverage.xml
 #   Properties that will be shared amongst all modules
 # =====================================================
 sonar.host.url=https://sonarcloud.com
-sonar.organization=usdot-jpo-sdc
+sonar.organization=USDOT-SDC
 sonar.login=${SONAR_TOKEN}
