--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
           - develop
       addons:
         - sonarcloud:
-          - organization: "usdot-jpo-sdc"
+          - organization: "USDOT-SDC"
       before_script:
         - npm install -g @angular/cli
       env:
@@ -23,7 +23,7 @@ matrix:
           - develop
       addons:
         - sonarcloud:
-          - organization: "usdot-jpo-sdc"
+          - organization: "USDOT-SDC"
       install:
         - pip install -r webportal/lambda/requirements.txt -r webportal/lambda/development_requirements.txt
       env:
