--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,5 @@
-sonar.projectKey=USDOT-SDC_sdc-dot-webportal
+#sonar.projectKey=USDOT-SDC_sdc-dot-webportal
+sonar.projectKey=KBRPurchase1_sdc-dot-webportal
 sonar.projectName=sdc-dot-webportal
 # =====================================================
 #   Meta-data for the project
@@ -17,5 +18,6 @@ sonar.python.coverage.reportPaths = webportal/lambda/coverage.xml
 #   Properties that will be shared amongst all modules
 # =====================================================
 sonar.host.url=https://sonarcloud.com
-sonar.organization=USDOT-SDC
+#sonar.organization=USDOT-SDC
+sonar.organization=kbrpurchase1
 sonar.login=${SONAR_TOKEN}
