--- a/terraform/config/backend-ecs-dev.conf
+++ b/terraform/config/backend-ecs-dev.conf
@@ -1,2 +1,3 @@
-bucket = "dev-lambda-bucket-505135622787"
+bucket = "dev.sdc.dot.gov.platform.terraform"
 key = "sdc-dot-webportal/terraform/terraform.tfstate"
+region = "us-east-1"
