--- a/terraform/config/backend-ecs-prod.conf
+++ b/terraform/config/backend-ecs-prod.conf
@@ -1,3 +1,3 @@
-bucket = "prod-lambda-bucket-004118380849"
+bucket = "prod.sdc.dot.gov.platform.terraform"
 key = "sdc-dot-webportal/terraform/terraform.tfstate"
 region = "us-east-1"
