--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.1",
-    "@angular/cdk": "^5.0.2",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/material": "^5.0.2",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
+    "@angular/animations": "^6.0.0",
+    "@angular/cdk": "^6.4.7",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/forms": "^6.0.0",
+    "@angular/http": "^6.0.0",
+    "@angular/material": "^6.0.2",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-browser-dynamic": "^6.0.0",
+    "@angular/router": "^6.0.0",
     "@types/node": "~6.0.60",
     "amazon-cognito-auth-js": "^1.1.0",
     "amazon-cognito-identity-js": "1.21.0",
@@ -33,19 +33,18 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
-    "ng2-toasty": "^2.1.0",
     "ngx-md": "^3.1.0",
     "primeng": "^5.2.7",
-    "rxjs": "^5.5.4",
+    "rxjs": "^6.6.7",
     "rxjs-compat": "^6.5.2",
     "uswds": "^2.4.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
+    "@angular/cli": "6.2.9",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/language-service": "^6.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "aws-sdk-mock": "^4.4.0",
@@ -62,7 +61,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
+    "typescript": "^2.9.2",
     "webpack": "^4.8.3"
   }
 }
