--- a/webportal/webapp/tsconfig.json
+++ b/webportal/webapp/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "importHelpers": false,
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
