--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -33,7 +33,8 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "ngx-md": "^3.1.0",
-    "primeng": "^5.2.7",
+    "primeicons": "^2.0.0",
+    "primeng": "^8.1.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.5.2",
     "tslib": "^1.9.0",
