--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
+    "@angular/animations": "^9.1.13",
     "@angular/cdk": "^8.2.3",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
     "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
-    "@types/node": "~6.0.60",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
+    "@types/node": "^12.11.1",
     "amazon-cognito-auth-js": "^1.1.0",
     "amazon-cognito-identity-js": "1.21.0",
     "aws-sdk": "^2.597.0",
@@ -32,24 +32,24 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
-    "ngx-md": "^3.1.0",
+    "ngx-md": "^8.1.6",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.5.2",
-    "tslib": "^1.9.0",
+    "tslib": "^1.10.0",
     "uswds": "^2.4.0",
-    "zone.js": "^0.8.14"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.29",
-    "@angular/cli": "^8.3.29",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "aws-sdk-mock": "^4.4.0",
-    "codelyzer": "^4.0.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "json-loader": "^0.5.7",
@@ -62,7 +62,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "^3.4.5",
+    "typescript": "^3.8.3",
     "webpack": "^4.8.3"
   }
 }
