Migrate Angular 13 to 14 - Part 3 - Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ webportal/webapp/package-lock.json
 webportal/webapp/.vscode/*
 
 # misc
+webportal/webapp/.angular
 webportal/webapp/.sass-cache
 webportal/webapp/connect.lock
 webportal/webapp/coverage
