SDC-6009-Replace ngx-md with ngx-markdown pkg

--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -31,7 +31,8 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "ngx-md": "^12.0.5",
+    "marked": "^4.2.12",
+    "ngx-markdown": "^15.1.1",
     "primeicons": "^2.0.0",
     "primeng": "^8.1.1",
     "rxjs": "^6.6.7",
@@ -47,6 +48,7 @@
     "@angular/language-service": "^15.1.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
+    "@types/marked": "^4.0.8",
     "aws-sdk-mock": "^4.4.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
