--- a/webportal/webapp/angular.json
+++ b/webportal/webapp/angular.json
@@ -28,7 +28,9 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/prismjs/themes/prism-okaidia.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/marked/marked.min.js"
+            ],
             "vendorChunk": true,
             "extractLicenses": false,
             "buildOptimizer": false,
