--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -43,14 +43,21 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.5",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "^15.1.5",
     "@angular/compiler-cli": "^15.1.4",
     "@angular/language-service": "^15.1.4",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/marked": "^4.0.8",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "aws-sdk-mock": "^4.4.0",
-    "codelyzer": "^6.0.0",
+    "eslint": "^8.33.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "json-loader": "^0.5.7",
@@ -62,7 +69,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~3.2.0",
-    "tslint": "~6.1.0",
     "typescript": "^4.8.4",
     "webpack": "^5.75.0"
   }
