--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -43,6 +43,7 @@
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.5.2",
     "tslib": "^2.0.0",
+    "types": "^0.1.1",
     "uswds": "^2.4.0",
     "zone.js": "~0.11.4"
   },
