Fixed first table in export requests

--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -38,6 +38,7 @@
     "jquery": "^3.3.1",
     "marked": "^4.2.12",
     "ngx-markdown": "^15.1.1",
+    "primeflex": "^3.3.0",
     "primeicons": "^6.0.1",
     "primeng": "^15.2.0",
     "rxjs": "^6.6.7",
